@@ -16,6 +16,7 @@
 	* Fix reading \DDD: Error on values that are outside range (>255).
 	* bugfix #429: fix doxyparse.pl fails on NetBSD because specified
 	  path to perl.
+	* New ECDSA support (RFC 6605), use --disable-ecdsa for older openssl.
 
 1.6.12
 	* bugfix #413: Fix manpage source for srcdir != builddir
